# rail_projects

./: .copier-answers.yml  .gitignore  pyproject.toml
.github/workflows/: linting.yml  publish-to-pypi.yml  smoke-test.yml  testing-and-coverage.yml
docs/: conf.py  demos.rst  index.rst
docs/source/: analysis_components.rst  components.rst  contributing.rst  factories.rst  fix_an_issue.rst  flavors.rst  installation.rst  interactive.rst  new_data_extractor.rst  new_dataset_holder.rst  new_plotter.rst  overview.rst  pipelines.rst  rail_project.rst
examples/: cardinal_project.yaml  cardinal_project_library.yaml  ci_project-cardinal.yaml  ci_project-flagship.yaml  flagship_project.yaml  flagship_project_library.yaml  rail_plotting_control.ipynb  rail_project_example.ipynb  rail_project_example_Cardinal.ipynb  rail_project_example_Flagship.ipynb  rail_project_flagship_reducer_example.ipynb  rail_project_library.ipynb
roman_rubin/: notes.txt  roman_plus_rubin.yaml  roman_rubin.yaml  roman_rubin_blending.yaml  roman_rubin_common.yaml
sonnet/: charge.md
tests/: ci_algorithms.yaml  ci_cardinal_project.yaml  ci_cardinal_project_library.yaml  ci_catalogs.yaml  ci_datasets.yaml  ci_flagship_project.yaml  ci_flagship_project_library.yaml  ci_pipelines.yaml  ci_plot_groups.yaml  ci_plots.yaml  ci_project-cardinal.yaml  ci_project.yaml  ci_project_common.yaml  ci_project_files.yaml  ci_project_library.yaml  ci_selections.yaml  ci_subsample.yaml  ci_subsample_library.yaml  ci_subsamples.yaml  conftest.py  default_catalogs.yaml  test_name_utils.py  test_project.py
(+86 files in other folders)
